minio/service.minio-api.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: s3
    app.kubernetes.io/instance: minio
    app.kubernetes.io/name: minio
    app.kubernetes.io/part-of: minio
  name: minio-api
  namespace: minio
spec:
  ports:
    - name: api
      port: 9000
      protocol: TCP
      targetPort: api
  selector:
    app.kubernetes.io/component: s3
    app.kubernetes.io/instance: minio
    app.kubernetes.io/name: minio
    app.kubernetes.io/part-of: minio
  type: ClusterIP
