minio/service.minio-http.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: s3
    app.kubernetes.io/instance: minio
    app.kubernetes.io/name: minio
    app.kubernetes.io/part-of: minio
  name: minio-http
  namespace: minio
spec:
  ports:
    - name: http
      port: 9090
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/component: s3
    app.kubernetes.io/instance: minio
    app.kubernetes.io/name: minio
    app.kubernetes.io/part-of: minio
  type: ClusterIP
