minio/ingress.minio.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: minio
spec:
  ingressClassName: nginx
  rules:
    - host: minio.local.kube
      http:
        paths:
          - backend:
              service:
                name: minio-http
                port:
                  number: 9090
            path: /
            pathType: Prefix
